fix(core): 서브클래스 메서드가 상속된 변경자를 호출하는 경우와 테이블명 기본값을 고침
리뷰 C1: 상위 타입(@MappedSuperclass)에 선언된 변경자를 서브클래스 메서드가
호출하면(this.markDeleted() 처럼), javac 은 호출 owner 를 상위 타입이 아니라
서브클래스로 기록합니다. mutatorsOf 의 고정점 반복이 그 클래스가 "선언한"
메서드만 대조 집합으로 써서 이 호출을 놓쳤습니다. 상위 타입의 변경자 집합을
미리 계산해 대조 집합에 섞어 넣어 고쳤습니다. ConcurrentHashMap 재진입을
피하려고 상위 타입 조회는 computeIfAbsent 람다 밖에서 먼저 끝냅니다.

리뷰 I1: camelToSnake 가 모든 대문자 앞에 밑줄을 넣어 Spring Boot 기본
테이블명(SpringPhysicalNamingStrategy)과 다른 문자열을 만들었습니다
(HTTPServer -> h_t_t_p_server, 실제는 httpserver). 앞 글자가 소문자이고
뒷 글자도 소문자일 때만 밑줄을 넣는 springPhysicalNamingSnakeCase 를
추가하고, 기본값 경로에 이 결과와 단순명의 소문자를 함께 등록해 조회
후보를 넓혔습니다. 기존 camelToSnake 는 안전망으로 남겨 뒀습니다.

리뷰 I2: buildTableIndex 가 명시적 @Table 값과 기본값을 같은 우선순위로
등록해, 다른 엔티티의 기본값이 먼저 등록되면 명시값이 밀릴 수 있었습니다.
2단계로 나눠 명시값을 전부 등록한 뒤에 기본값을 putIfAbsent 로 등록하도록
고쳤고, 두 단계 모두 엔티티 이름을 정렬한 순서로 돌게 해 승자가 입력 Set 의
순회 순서에 좌우되지 않게 했습니다.

리뷰 M1/M2/M4/M5: entityForTable/registerTableName 의 toLowerCase 에
Locale.ROOT 를 명시하고, 기본값 경로에 단순명의 소문자도 등록하고,
isMutator javadoc 에 상위 타입 참조로 오는 변경자를 의도적으로 잡지 않는
이유를 남기고, 아무도 쓰지 않는 entities() 를 지웠습니다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>